# TriQTO

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
configs/: base.yaml
constraints/: cpu.txt  gpu.txt
docs/: ACTION_SCHEMA.md  BASELINE_SCHEMA.md  CAPABILITY_MATRIX.md  CODEX_IMPLEMENTATION_ORDER.md  DATA_LAKE_SCHEMA.md  EVALUATION_ENGINE.md  EXPERIMENT_LOG_TEMPLATE.md  FAILURE_MODES.md  GRAPH_SCHEMA.md  HARDWARE_VALIDATION_PLAN.md  MEASUREMENT_IDENTIFIABILITY.md  MODEL_ARCHITECTURE.md  MODEL_READY_DEBUG_TRAINING.md  MODEL_READY_FULL_MULTITASK_TRAINING.md  MODEL_READY_TRAINING_COMPAT.md  OPERATIONAL_ACTIONS_AND_LATENT_TOPOLOGY.md  PHASE11_TO_PHASE12_TOPOLOGY_ATTACHMENT.md  PHASE14_SCOPE.md  PHASE15_5.md  PHASE15_6.md  PHASE15_SCOPE.md  TOPOLOGY_SCHEMA.md  TRAINING_ENGINE.md  TRAINING_PLAN.md  TRAINING_VIEW_SCHEMA.md  TRI_QTO_ARCHITECTURE.md
scripts/: attach_phase11_topology.py  build_action_dataset.py  build_training_views.py  collect_hardware_results.py  convert_dataset_to_graphs.py  evaluate.py  evaluate_operational_topology.py  extract_checkpoint_latents.py  generate_checkpoint_latent_topology.py  generate_data.py  generate_dataset.py  generate_topology.py  run_baselines.py  run_cpu_smoke_workflow.py  run_dataset_preprocessing.py  run_hardware_jobs.py  run_phase12_fast.py  run_phase15_5.py  run_phase15_6_campaign.py  run_phase15_6_optimized_data.py  run_phase15_6_optimized_data_v2.py  setup_local.sh  setup_runpod.sh  smoke_test_pipeline.py  train.py  train_model_ready_debug.py  (+5 more)
(+481 files in other folders)
