[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triqto"
version = "0.1.0"
description = "Tri-Manifold Quantum Topological Optimization research scaffold"
requires-python = ">=3.11,<3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
